removed top margin from article - breaks on pages with secondary nav

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -37,7 +37,7 @@ block contents
             section
                 h2 Tour of Homes
                 p 
-                    a(href="/events/tour-of-homes") Preview the homes chosen for the #{globals.ipf.date.year} Tour of Homes.
+                    a(href="/events/tour-of-homes") Preview the homes on tour this year.
             .ArrowNav
                 a(href="/events/tour-of-homes") >
     
