--- a/src/html/volunteer/index.jade
+++ b/src/html/volunteer/index.jade
@@ -14,9 +14,9 @@ block contents
             
         p 
             | This festival runs on volunteers. To sign up to volunteer, please visit 
-            a(href="http://vols.pt/zbJaBt") VolunteerSpot
+            a(href=globals.volunteerSite) Signup.com
             = ' '
-            | today to setup an account.
+            | today to volunteer for this year's festival
         
         
         h2 Rules for All Volunteers
@@ -61,7 +61,7 @@ block contents
         p 
             | If you're ready to volunteer for festival,
             = ' '
-            a(href="http://vols.pt/zbJaBt") sign up at VolunteerSpot now!
+            a(href=globals.volunteerSite) go to Signup.com now!
         
         
           // this also works although cumbersome:
