--- a/src/html/about/index.jade
+++ b/src/html/about/index.jade
@@ -85,18 +85,18 @@ block contents
             section
                 h3 Join Our Volunteer Team Today.
                 
-                a.u-blockCentered.volspot(href="http://vols.pt/zbJaBt?utm_source=group-badge-signups-orange")
-                    img(src="//vspot.s3.amazonaws.com/groups/sharing/button_orange.png" alt="Click to View Our Sign-ups on VolunteerSpot")
+                a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
         
-        li.PromotionItem.alt-tertiary
+        li.PromotionItem
             section
                 h3 Festival Artwork Chosen
                 
                 p
-                    a(href="/news/2016/festival-artist") Read the interview with local artist Cooper Pierce.
+                    a(href="/art/2017/") Read the interview with local artist Mindy Phan.
             
             .ArrowNav
                 a(href="#") >
+
 
         li.PromotionItem.alt-secondary
             section
@@ -108,6 +108,6 @@ block contents
                     a(href="http://twitter.com/InmanParkFest" target="_blank") 
                         span.icon.-twitter
                             span.u-visuallyhidden Twitter: @inmanparkfest
-                    a(href="https://www.instagram.com/" target="_blank")
+                    a(href="https://www.instagram.com/inmanparkfest" target="_blank")
                         span.icon.-instagram
-                            span.u-visuallyhidden Instagram
+                            span.u-visuallyhidden Instagram: @inmanparkfest
