--- a/src/html/volunteer/index.jade
+++ b/src/html/volunteer/index.jade
@@ -51,12 +51,7 @@ block contents
                     strong NO GUARANTEED SLOTS. 
                     | Signing up for a beer shift does not guarantee you will be given that volunteer slot.  You will receive a confirmation e-mail from the Beer Committee to let you know once the slot is reserved.
 
-        p 
-            | We love our beer volunteers and hope these procedures will make our beer trucks operate smoothly, while keeping our insurer and liquor license holder happy. If you have ANY questions, please direct them to 
-            = ' '
-            a(href="mailto:lisaburnette@bellsouth.net") Lisa Burnette 
-            = ' '
-            | and she will either answer them or get you in touch with your Beer Captain.
+        p We love our beer volunteers and hope these procedures will make our beer trucks operate smoothly, while keeping our insurer and liquor license holder happy.
             
         p 
             | If you're ready to volunteer for festival,
