--- a/src/html/about/faq/index.jade
+++ b/src/html/about/faq/index.jade
@@ -17,83 +17,73 @@ block contents
         h2 Festival 101
         
         dl.FaqList
-            dt Q. When does festival take place?
-            dd A. The Inman Park Spring Festival always take place on the last weekend of April. This year it runs from #{globals.ipf.date.saturday.date} - #{globals.ipf.date.sunday.date}.
+            dt When does festival take place?
+            dd The Inman Park Spring Festival always take place on the last weekend of April. This year it runs from #{globals.ipf.date.saturday.date} - #{globals.ipf.date.sunday.date}.
             
-            dt Q. What are the hours?
-            dd A. On Friday, the Tour of Homes runs from Noon until 4:00 p.m (there are no other Festival events on Friday.) On Saturday and Sunday the Tour of Homes runs from Noon until 6:00 p.m. On Saturday, Festival (excluding the Tour of Homes) begins at 11:00 a.m. and runs until 8:30 p.m. On Sunday, the times are 11:00 until 7:00 p.m.
+            dt What are the hours?
+            dd On Friday, the Tour of Homes runs from Noon until 4:00 p.m (there are no other Festival events on Friday.) On Saturday and Sunday the Tour of Homes runs from Noon until 6:00 p.m. On Saturday, Festival (excluding the Tour of Homes) begins at 11:00 a.m. and runs until 8:30 p.m. On Sunday, the times are 11:00 until 7:00 p.m.
             
-            dt Q. When is the parade?
-            dd A. The parade occurs on Saturday at 2:00 p.m.
+            dt When is the parade?
+            dd The parade occurs on Saturday at 2:00 p.m.
 
-            dt Q. Are Pets Allowed?
-            dd A. Please remember that, by City of Atlanta Ordnance, pets are not allowed at Festivals, "unless part of a planned festival program or assisting persons with disabilities". This prohibition includes "dogs, cats, snakes, birds, pigs, etc.", and applies whether or not the pet is leashed. As the ordnance says, this is for the pet's protection as well as for the protection of festival patrons. Thanks!!
+            dt Are Pets Allowed?
+            dd Please remember that, by City of Atlanta Ordnance, pets are not allowed at Festivals, "unless part of a planned festival program or assisting persons with disabilities". This prohibition includes "dogs, cats, snakes, birds, pigs, etc.", and applies whether or not the pet is leashed. As the ordnance says, this is for the pet's protection as well as for the protection of festival patrons. Thanks!!
         
         h2 Tour of Homes Tickets 
         
         dl.FaqList
-            dt Q. How much do Tour of Homes Tickets Cost?
-            dd A. Tour of Homes tickets are $#{globals.tour.cost.advance} in advance and $#{globals.tour.cost.door} starting Friday, #{globals.ipf.date.friday.date}.
+            dt How much do Tour of Homes Tickets Cost?
+            dd Tour of Homes tickets are $#{globals.tour.cost.advance} in advance and $#{globals.tour.cost.door} starting Friday, #{globals.ipf.date.friday.date}.
             
-            dt Q. Are there group ticket rates?
-            dd A. Yes, group discounts are available for groups of 10 or more.
+            dt Are there group ticket rates?
+            dd Yes, group discounts are available for groups of 10 or more.
         
         h2 Markets
         
         dl.FaqList
-            dt Q. What are the hours of the Market?
-            dd A. 11:00AM to 6:00PM on Saturday and Sunday
+            dt What are the hours of the Market?
+            dd 11:00AM to 6:00PM on Saturday and Sunday
 
-            dt Q. How can I become an exhibitor?
-            dd 
-                | A. Complete the application and form available on the 
-                a(href="/market/become-an-exhibitor") Become an Exhibitor page
+            dt How can I become an exhibitor?
+            dd Complete the application and form available on the <a href="/market/become-an-exhibitor">Become an Exhibitor page</a>
 
-            dt Q. When is the application deadline?
-            dd A. The deadline is March 10, 2016.
+            dt When is the application deadline?
+            dd The deadline is March 10, 2016.
 
             //- TODO Put the application dates into the global data
-            dt Q. When will I find out if I have been accepted into the Market?
-            dd A. All applicants will be notified no later than March 17, 2016.
+            dt When will I find out if I have been accepted into the Market?
+            dd All applicants will be notified no later than March 17, 2016.
         
         
         h2 Events 
         
         dl.FaqList
-            dt Q. What are the hours?
-            dd A. On Friday, the Tour of Homes runs from Noon until 4:00 p.m (there are no other Festival events on Friday.) On Saturday and Sunday the Tour of Homes runs from Noon until 6:00 p.m. On Saturday, Festival (excluding the Tour of Homes) begins at 11:00 a.m. and runs until 8:30 p.m. On Sunday, the times are 11:00 until 7:00 p.m.
+            dt What are the hours?
+            dd On Friday, the Tour of Homes runs from Noon until 4:00 p.m (there are no other Festival events on Friday.) On Saturday and Sunday the Tour of Homes runs from Noon until 6:00 p.m. On Saturday, Festival (excluding the Tour of Homes) begins at 11:00 a.m. and runs until 8:30 p.m. On Sunday, the times are 11:00 until 7:00 p.m.
 
-            dt Q. When is the parade?
-            dd A. The parade occurs on Sat. at 2:00 p.m.
+            dt When is the parade?
+            dd The parade occurs on Sat. at 2:00 p.m.
 
 
         h2 Food 
         
         dl.FaqList
-            dt Q. What food is available at the festival?
-            dd A. Pizza, barbecue, gyros, sandwiches, and, of course, funnel cakes and other street festival staples. Local restaurants will also be open for business.
+            dt What food is available at the festival?
+            dd Pizza, barbecue, gyros, sandwiches, and, of course, funnel cakes and other street festival staples. Local restaurants will also be open for business.
 
 
         h2 Sponsors
         
         dl.FaqList
-            dt Q. What levels of sponsorships does the festival offer?
-            dd A. There are a number of levels of sponsorships and are available to businesses of all sizes, including Gold and Silver levels as well as Friends of Festival designations.
+            dt What levels of sponsorships does the festival offer?
+            dd There are a number of levels of sponsorships and are available to businesses of all sizes, including Gold and Silver levels as well as Friends of Festival designations.
 
-            dt Q. How do I learn about sponsorships?
-            dd A. Go to the Contact Us page and send an e-mail request to Festival Sponsorships.
-
-
-        h2 Friends of Festival 
-        
-        p Do we need this?
+            dt How do I learn about sponsorships?
+            dd Go to the Contact Us page and send an e-mail request to Festival Sponsorships.
 
 
         h2 Volunteer
 
         dl.FaqList
-            dt Q. Where do you sign up?
-            dd 
-                | A. You can sign up online at 
-                = ' '
-                a(href="http://vols.pt/zbJaBt") http://vols.pt/5WUsPh
+            dt Where do you sign up?
+            dd You can sign up online at <a href="#{globals.volunteerSite}">Signup.com</a>
