--- a/src/html/templates/mixins.jade
+++ b/src/html/templates/mixins.jade
@@ -44,3 +44,6 @@ mixin musicday(dayTitle, stages, day)
 
 mixin slideImage(imageName)
     img(sizes="(min-width: 1024px) 1024px, 100vw" srcset="http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_256/ipf/#{imageName} 256w, http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_512/ipf/#{imageName} 512w, http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_768/ipf/#{imageName} 768w, http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_1024/ipf/#{imageName} 1024w" src="http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_512/ipf/#{imageName}" alt)
+
+mixin tourImage(imageName, alt)
+    img(sizes="(min-width: 1024px) 940px, 100vw" srcset="http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_234/ipf/#{imageName} 235w, http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_470/ipf/#{imageName} 470w, http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_705/ipf/#{imageName} 705w, http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_940/ipf/#{imageName} 940w" src="http://res.cloudinary.com/chadzilla/image/upload/f_auto,q_70,w_512/ipf/#{imageName}" alt=alt).TourHomeImage
