added circus-camp sponsor

--- a/src/html/sponsors/index.jade
+++ b/src/html/sponsors/index.jade
@@ -32,6 +32,7 @@ block contents
             mixin sponsorGridImage("/assets/img/2017/sponsors/silver/mailchimp.png", "MailChimp", "http://mailchimp.com/")
             mixin sponsorGridImage("/assets/img/2017/sponsors/silver/publix.png", "Publix", "http://publix.com/")
             mixin sponsorGridImage("/assets/img/2017/sponsors/silver/north-american-properties.png", "North American Properties", "http://www.naproperties.com/")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/silver/circus-camp.png", "Circus Camp", "http://www.circuscamp.org/")
 
 
         h2.SponsorsHeader.SponsorsHeader--bronze Bronze Sponsors
