--- a/src/html/templates/mixins.jade
+++ b/src/html/templates/mixins.jade
@@ -58,3 +58,7 @@ mixin sponsorGridImage(src, alt, url)
     li
         a(href=url target="_blank")
             img(src=src alt=alt)
+
+mixin footerSponsor(src, alt, url)
+    a(href=url target="_blank")
+        img(src=src alt=alt)
