--- a/src/assets/css/common/_footer.scss
+++ b/src/assets/css/common/_footer.scss
@@ -26,16 +26,32 @@
 
 .Footer-sponsors {
     margin: 0 0 2em 0;
-    // text-align: center;
-
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
     a {
-        display: inline-block;
-        margin-right: 0.5em;
-        margin-bottom: 0.75em;
-        padding: 0.5em 2em;
-        font-size: 0.75em;
-        border: 2px solid #999;
-        border-radius: 1em;
+        display: block;
+        width: 50%;
+        // use this only when there are odd number of footer sponsors
+        // and ensure the last logo is appropriate in this slot
+        &:last-child {
+            width: 100%;
+        }
+    }
+
+    @media (min-width: $bp-md) {
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: space-between;
+
+        a {
+            width: inherit;
+
+            &:last-child {
+                width: inherit;
+            }
+        }
     }
 }
 
