--- a/src/html/templates/layout.jade
+++ b/src/html/templates/layout.jade
@@ -74,7 +74,7 @@ html(lang="en")
                     a(href="/privacy-policy" class="PipeNav") Privacy Policy
                     a(href="/trademark" class="PipeNav") Trademark Use
                 
-                p.fineprint #{globals.copyright}
+                p.fineprint!= globals.copyright
 
         script(src="/assets/js/plugins.js")
         script.
