--- a/src/assets/css/common/_utilities.scss
+++ b/src/assets/css/common/_utilities.scss
@@ -9,6 +9,16 @@
     }
 }
 
+.u-container-thin {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 600px;
+
+    @media (min-width: $bp-lg) {
+        padding: 0;
+    }
+}
+
 .u-container-md {
     @media (min-width: $bp-md) {
         margin: 0 auto !important;
