--- a/src/assets/css/pages/_music.scss
+++ b/src/assets/css/pages/_music.scss
@@ -35,7 +35,7 @@ $oddRowColor: #B4CED6;
     }
 
     h3 {
-        margin: 0;
+        margin: 0 0 1em;
         padding: 0.5rem;
         font-size: 1.0em;
         text-align: center;
@@ -44,6 +44,7 @@ $oddRowColor: #B4CED6;
 
     h4 {
         font-size: 1.25em;
+        margin-top: 0;
         margin-bottom: 0;
         position: relative;
     }
@@ -95,8 +96,96 @@ $oddRowColor: #B4CED6;
         margin: 0;
         font-size: 0.75em;
     }
+
+    @media (min-width: $bp-md) {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 
-.MusicStage > li {
+.Band {
+    display: flex;
+    flex-wrap: nowrap;
     margin-bottom: 1em;
+
+    @media (min-width: $bp-md) {
+        width: 50%;
+    }
 }
+
+.BandPhoto {
+    width: 40%;
+
+    .img {
+        background-color: blue;
+        width: 130px;
+        height: 90px;
+    }
+
+    @media (min-width: $bp-md) {
+        width: 130px;
+        margin-right: 1em;
+    }
+}
+
+.BandCopy {
+    width: 60%;
+}
+
+.BandDetails {
+    position: fixed;
+    z-index: 1001;
+    display: none;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    height: 100vh;
+    background-color: $brand-white;
+    padding: 2em;
+    overflow-y: auto;
+
+    .BandPhoto {
+        width: 100%;
+
+        .img {
+            width: 100%;
+            height: 215px;
+        }
+
+        @media (min-width: $bp-md) {
+            .img {
+                height: 415px;
+            }
+        }
+    }
+
+    article {
+        margin-bottom: 5em;
+    }
+}
+
+.BandDetails--close {
+    position: fixed;
+    top: 4px;
+    right: 4px;
+    font-size: 0.75em;
+    color: darken($link-color, 20%);
+    background-color: $brand-white;
+    border: 1px solid darken($link-color, 10%);
+}
+
+
+.BandDetailsTrigger {
+    border: none;
+    padding: 0;
+    margin: 0.5em 0;
+    background: transparent;
+    color: $link-color;
+
+    &:hover, &:focus {
+        color: $brand-black;
+        cursor: pointer;
+    }
+}
+
