content updates and integration of mailgun into contact.php

--- a/src/html/about/faq/index.jade
+++ b/src/html/about/faq/index.jade
@@ -48,11 +48,11 @@ block contents
             dd Complete the application and form available on the <a href="/market/become-an-exhibitor">Become an Exhibitor page</a>
 
             dt When is the application deadline?
-            dd The deadline is March 10, 2016.
+            dd The deadline is March 10, 2017.
 
             //- TODO Put the application dates into the global data
             dt When will I find out if I have been accepted into the Market?
-            dd All applicants will be notified no later than March 17, 2016.
+            dd All applicants will be notified no later than March 17, 2017.
         
         
         h2 Events 
@@ -76,10 +76,10 @@ block contents
         
         dl.FaqList
             dt What levels of sponsorships does the festival offer?
-            dd There are a number of levels of sponsorships and are available to businesses of all sizes, including Gold and Silver levels as well as Friends of Festival designations.
+            dd There are several levels of sponsorships available to businesses of all sizes, including Gold and Silver levels as well as Friends of Festival designations.
 
-            dt How do I learn about sponsorships?
-            dd Go to the Contact Us page and send an e-mail request to Festival Sponsorships.
+            dt How do I learn more about sponsorships?
+            dd Go to the <a href="/contact">Contact Us page</a> and send an e-mail request to Festival Sponsorships.
 
 
         h2 Volunteer
