--- a/src/html/events/dance/index.jade
+++ b/src/html/events/dance/index.jade
@@ -26,14 +26,15 @@ block contents
 
     article.u-container
     
-        p Did you ever wonder where ballet came from? This art form is really quite absurd when you take a look at it. Why do they walk like ducks and what are they doing with their arms, circles!? It just is not natural. And then there is modern dance. Is it all suffering? Why are they on the floor!? Get up and cheer up for goodness sake.
+        p This family-friendly performance of high artistic and technical quality includes Q &amp; A with the artists and a cool respite from the bustle of Festival's busy streets. The Inman Park Dance Festival is celebrating 16 years of presenting dance as a part of the Inman Park Festival and Tour of Homes. The Dance Festival's goal is to promote great dance in Atlanta and Georgia. It is the only free admission dance festival that presents both ballet and modern vocabulary in the State.
 
-        p At the Inman Park Dance Festival some of these questions will be answered. This is because this year's line-up of performing companies and presented work is really exceptional. It spans 300 years of dance history, has field definers and the next generation of groundbreakers.
+        ul
+            li Atlanta Ballet Center Theatre
+            li Ballethnic
+            li Emory University Department of Movement Studies
+            li Full Radius Dance
+            li The Georgia Ballet
 
-        p ---this year's description goes here---
-        
-        p So, take a seat after the Parade or visiting every booth on Edgewood, be entertained and be impressed by the work of these accomplished and varied artists.
-        
         h3 The dance festival takes place on:
         
         p 
