--- a/src/html/events/index.jade
+++ b/src/html/events/index.jade
@@ -38,7 +38,7 @@ block contents
             li 
                 a(href="/events/dance") dance performances by local professional dance groups
             li 
-                a(href="/events/kidzone") a kidzone space for kids to play
+                a(href="/events/kidzone") a kid's zone space for kids to play
 
 
         p No matter what event or activity brings you to festival, plan to spend the day or weekend in the neighborhood as there is much to see and do.
