--- a/src/html/lost-and-found/index.jade
+++ b/src/html/lost-and-found/index.jade
@@ -12,11 +12,12 @@ block contents
 
         h1 Lost and Found
 
-        p If you have lost or found an item during festival, please stop by the information booth at the intersection of Euclid Avenue and Elizabeth Street to drop off or look for lost items.
+        p If you have lost or found an item during festival, please stop by the information booth in front of 160 Elizabeth Street to drop off or look for lost items.
 
         p
-            | If you need to contact the festival staff for lost and found items, please send an email to Karin Mebius at 
+            | If you need to contact the festival staff for lost and found items, please send an email to Robbie Pierce at 
             = ' '
-            a(href="mailto:karinmebius@gmail.com") karinmebius@gmail.com.
+            a(href="mailto:robbiepierce@robbiewhytekerner.com") robbiepierce@robbiewhytekerner.com.
 
-            
+        p Please don't forget to include a detailed description of the item you lost or found, where you lost or found it, and include a phone number where we can reach you.
+
