--- a/src/html/map/index.jade
+++ b/src/html/map/index.jade
@@ -19,15 +19,10 @@ block contents
             li Marta to the Inman Park/Reynoldstown Station
             li Drive to a Marta station near Inman Park (Edgewood/Candler Park, East Lake) and then take Marta just 1 or 2 stops to our station
             li Lyft/Uber/Taxi
-        
-        h2 Parking
-        
-        p There is almost no parking in the neighborhood during festival and many streets will be closed. 
-        
-        
-        h2 Bike
-        
-        p Free and secure valet bike parking will be provided by the Atlanta Bicycle Coalition in the alley off Delta Place near the Delta Park Stage and on the eastern side of the neighborhood at Euclid Avenue and Waverly Way.
+
+        //- h2 Bike
+
+        //- p Free and secure valet bike parking will be provided by the Atlanta Bicycle Coalition in the alley off Delta Place near the Delta Park Stage and on the eastern side of the neighborhood at Euclid Avenue and Waverly Way.
         
         h2 Festival Map with Free Shuttle Route and Bike Parking
         
