--- a/src/html/market/index.jade
+++ b/src/html/market/index.jade
@@ -14,7 +14,7 @@ block contents
 
         h1 Arts & Crafts Show and Street Vendors
         
-        p If you're looking for gifts, new clothes, art for your house or just about anything else, you are likely to find what your looking for at one of the many vendor booths lining the tree-shaded streets during the Inman Park Festival.
+        p If you're looking for gifts, new clothes, art for your house or just about anything else, you are likely to find what you're looking for at one of the many vendor booths lining the tree-shaded streets during the Inman Park Festival.
         
         h2 Markets
         
@@ -37,6 +37,7 @@ block contents
             = ' '
             | booths showcase a variety of non-profit organizations where you can learn about and help out groups doing important work locally and across the states.
         
+        p Together they comprise one of the largest street markets in the Southeast!
         
         h2 Become a Vendor
         
