--- a/src/html/events/parade/index.jade
+++ b/src/html/events/parade/index.jade
@@ -22,7 +22,7 @@ block contents
     
     article.u-container
     
-        p Come see our Butterfly, Trash Monarch, Precision Attache Case Drill Team, and <a href="http://seedandfeed.org/" target="_blank">Seed & Feed Marching Abominables</a> take to the street in the city's funkiest and most eclectic spring parade. This favorite of Festival begins at Edgewood and Euclid on Saturday #{globals.ipf.date.saturday.date} at #{globals.events.parade.time} (rain or shine) and runs to Austin Ave. at the foot of Little Five Points.
+        p Come see our Butterfly, Trash Monarch, Precision Attache Case Drill Team, and the <a href="http://seedandfeed.org/" target="_blank">Seed & Feed Marching Abominables</a> take to the street in the city's funkiest and most eclectic spring parade. This favorite of Festival begins at Edgewood and Euclid on Saturday #{globals.ipf.date.saturday.date} at #{globals.events.parade.time} (rain or shine) and runs to Austin Avenue at the foot of Little Five Points.
 
         p 
             | The AJC considers the parade one of 
