--- a/src/html/market/community-corner/index.jade
+++ b/src/html/market/community-corner/index.jade
@@ -11,6 +11,6 @@ block contents
     
         h1 Community Corner
         
-        p Non-profit organization may request a space in the Community Corner which is separate from the main vendor area. Appropriate applicants (registered non-profit) are accepted based on availability on first come, first serve basis.
+        p Non-profit organizations may request a space in the Community Corner which is separate from the main vendor area. Appropriate applicants (registered non-profits) are accepted based on availability on first come, first serve basis.
 
-        p Below are last year's non-profit organizations.
+        //- p Below are this year's non-profit organizations.
