--- a/src/html/market/street-market/index.jade
+++ b/src/html/market/street-market/index.jade
@@ -10,6 +10,6 @@ block contents
     
         h1 Street Market
         
-        p Atlanta's largest Street Market offers more than 250 booths of antiques and handcrafted wares. You will find plenty of unique items — everything from handmade soap and unique plants to one-of-a-kind paintings and specialty jewelry.
+        p Atlanta's largest Street Market offers more than 250 booths of antiques and handcrafted wares. You will find plenty of unique items &ndash; everything from handmade soap and unique plants to one-of-a-kind paintings and specialty jewelry.
 
         p This year's Street Market vendors will be listed below as soon as they are chosen.
