--- a/src/html/volunteer/index.jade
+++ b/src/html/volunteer/index.jade
@@ -25,7 +25,7 @@ block contents
         
         p We will have kegs of beer reserved for our active volunteers to enjoy after their volunteer shifts. Due to requirements from our insurance carrier and liquor license holder as well as logistical concerns, <strong>volunteers and staff may no longer get free beer from any beer trucks</strong>. Volunteers will still be rewarded with a cold one, just not via the busy beer trucks. Once you sign up, your committee chairperson will let you know where you can enjoy your volunteer beer after your shift.
 
-        p Again remember, and please spread the word – no one will be given free beer from a beer truck, whether wearing a staff shirt, volunteer shirt or no shirt!
+        p Again remember, and please spread the word &ndash; no one will be given free beer from a beer truck, whether wearing a staff shirt, volunteer shirt or no shirt!
         
         p 
             | If you have any questions about volunteering for any duty other than beer shifts, please email
