--- a/src/html/events/kidzone/index.jade
+++ b/src/html/events/kidzone/index.jade
@@ -1,7 +1,7 @@
 extends ../../templates/layout.jade
 
 block title
-    title #{globals.ipf.title} | Events | Kidzone
+    title #{globals.ipf.title} | Events | Kids' Zone
 
 block contents
 
@@ -9,13 +9,14 @@ block contents
 
     .u-container
     
-        h1 Inman Park Festival Kidzone
+        h1 Inman Park Festival Kid's Zone
     
     .Hero
-        p Fun Kidzone photos go here
+        p Fun Kids' Zone photos go here
     
     article.u-container
     
-        p Festival provides a dedicated space for kids to play that includes slides, obstacles courses, crafts, a great playground, riding toys for our youngest guests and the CHANCE TO JOIN A CIRCUS, all of them FREE! 
+        p Festival provides a dedicated space for kids to play that includes slides, obstacles courses, crafts, a great playground, riding toys for our youngest guests and the CHANCE TO JOIN A CIRCUS, all of them FREE! This year there is even more!
         
-        p The Kidzone is located in Springvale Park, off Elizabeth Street and Waverly Way, behind the main music tent. It is a great place to let the kids play while parents or chaperones enjoy one of Atlanta's oldest urban park spaces. Kidzone hours are from Noon until 6 PM on Saturday #{globals.ipf.date.saturday.date} and Sunday #{globals.ipf.date.sunday.date}.
+        p The Kids' Zone is located in Springvale Park, off Elizabeth Street and Waverly Way, behind the main music tent. It is a great place to let the kids play while parents or chaperones enjoy one of Atlanta's oldest urban park spaces. Kids' Zone hours are from 11AM until 6 PM on Saturday #{globals.ipf.date.saturday.date} and Sunday #{globals.ipf.date.sunday.date}.
+
