--- a/src/html/about/index.jade
+++ b/src/html/about/index.jade
@@ -77,7 +77,7 @@ block contents
         
         h3 Arts & Crafts Show and Street Market
         
-        p Browse many booths on the tree-shaded streets of Inman Park from 11AM to 6PM Saturday and Sunday during festival. The <a href="/market/arts-crafts-market">Arts & Crafts Market</a> is a juried selection of more than 150 artists showcasing their work in a variety of media including sculpture, painting and photography. The <a href="/market/street-market">Street Market</a> includes more than 250 booths of vendors selling antiques, handcrafted wares, clothing and a large variety of other items.
+        p Browse many booths on the tree-shaded streets of Inman Park from 11AM to 6PM Saturday and Sunday during festival. The <a href="/booths/arts-crafts-market">Arts & Crafts Market</a> is a juried selection of more than 150 artists showcasing their work in a variety of media including sculpture, painting and photography. The <a href="/booths/street-market">Street Market</a> includes more than 250 booths of vendors selling antiques, handcrafted wares, clothing and a large variety of other items.
         
 
     ul.PromotionGrid.u-container.u-container--noPad
