--- a/src/assets/css/components/_header.scss
+++ b/src/assets/css/components/_header.scss
@@ -207,6 +207,7 @@
     @media (min-width: $bp-lg) {
         margin-right: 1em;
         padding: 0.75em 0.5em 0.5em;
+        font-size: 1em;
     }
 }
 
