fixed tablet/footer width issues; added volunteer promo to hero; fixed some other tablet styling issues

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -8,7 +8,8 @@ $brand-grey-dark: rgb(45, 45, 45);
 
 $link-color: $brand-green;
 $link-hover-color: rgba($brand-green, 0.15);
-
+$link-color-alt: rgb(18, 34, 135);
+$link-hover-color-alt: rgb(34, 54, 181);
 
 // TYPOGRAPHY
 $base-font-size: 16px;
