--- a/src/assets/css/common/_footer.scss
+++ b/src/assets/css/common/_footer.scss
@@ -51,6 +51,10 @@
             &:last-child {
                 width: inherit;
             }
+
+            img {
+                max-width: 100px;
+            }
         }
     }
 }
