--- a/src/assets/css/components/_promotionGrid.scss
+++ b/src/assets/css/components/_promotionGrid.scss
@@ -5,7 +5,7 @@
     padding: 0;
     list-style: none;
 
-    @media screen and (min-width: $bp-lg) {
+    @media screen and (min-width: $bp-md) {
         margin: 0 auto;
         align-items: stretch;
         flex-direction: row;
@@ -65,7 +65,7 @@
         background-color: rgba(0, 0, 0, 0.05);
     }
 
-    @media screen and (min-width: $bp-lg) {
+    @media screen and (min-width: $bp-md) {
         width: 33.3333%;
 
         > section {
